--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@visx/heatmap": "^2.1.2",
     "axios": "^0.24.0",
+    "can-ndjson-stream": "^1.0.2",
     "chess-web-api": "^1.1.1",
     "chess.js": "^0.12.0",
     "react": "^17.0.2",
